# EM-Wave-Propagation

./: .gitignore  2D_wave.cpp  3D_wave.cpp  CLAUDE.md  CMakeLists.txt  README.md  vcpkg.json
include/: camera.h  em_common.h  grid.h  shader_utils.h
shaders/: field.frag  maxwell.comp  maxwell3d.comp  slice3d.frag
